--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
+  background-color: rgb(18, 18, 18);  
 }
+
 
 .App-logo {
   animation: App-logo-spin infinite 20s linear;
@@ -32,13 +34,32 @@
 
 /* My React Components */
 
+/* Main Content */
+.content{
+  margin-top: 50px; 
+  background-color: rgb(18, 18, 18);
+  height: 100vh;
+
+}
 
 /* Display Bar */
+.DisplaybarContainer{
+  background-color: white;
+  width: 100%;
+  margin-top: 20px; 
+
+  border: solid rgb(70, 70, 70) 2px;
+  border-radius: 5px;
+}
+
 .Displaybar{
   display: flex;
-  width: 500px;
-  background-color: #97BD9F;
+  width: auto;
+  background-color: rgb(58, 58, 58);
+  color: rgb(245, 245, 245);
   padding: 8px 10px;
+  border: solid rgb(70, 70, 70) 2px;
+  
 
   font-size: .8em;
 
