--- a/src/App.css
+++ b/src/App.css
@@ -39,6 +39,7 @@
   margin-top: 50px; 
   background-color: rgb(18, 18, 18);
   height: 100vh;
+  padding-bottom: 100px;
 
 }
 
@@ -59,6 +60,7 @@
 
 .DisplaybarContainer-footer{
   height: 20px;
+  
 }
 
 
