--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,7 @@
 .content{
   margin-top: 50px; 
   background-color: rgb(18, 18, 18);
-  height: 100vh;
+  height: calc(100vh + 200px);
   padding-bottom: 100px;
 
 }
@@ -66,7 +66,7 @@
 
 .Displaybar{
   display: flex;
-  width: auto;
+  width: 100%;
   background-color: rgb(58, 58, 58);
   color: rgb(245, 245, 245);
   padding: 8px 10px;
