--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,7 @@
 .App {
   text-align: center;
-  background-color: rgb(18, 18, 18);  
+
+  background-color: #343A40;
 }
 
 
@@ -10,7 +11,7 @@
 }
 
 .App-header {
-  background-color: #222;
+  background-color: #343A40;
   height: 150px;
   padding: 20px;
   color: white;
@@ -37,7 +38,8 @@
 /* Main Content */
 .content{
   margin-top: 50px; 
-  background-color: rgb(18, 18, 18);
+  background-color: #343A40;
+  color: white;
   height: calc(100vh + 200px);
   padding-bottom: 100px;
 
