--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,5 @@
 .App {
   text-align: center;
-
   background-color: #343A40;
 }
 
@@ -40,7 +39,7 @@
   margin-top: 50px; 
   background-color: #343A40;
   color: white;
-  height: calc(100vh + 200px);
+  /* height: calc(100vh + 200px); */
   padding-bottom: 100px;
 
 }
